Swapped old index.html (Tea Cozy) with Niamh's html

--- a/index.html
+++ b/index.html
@@ -1,79 +1,33 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <title>Tea Cozy</title>
-        <link href="./Resources/CSS/index.css" rel="stylesheet">
+        <link rel="stylesheet" href="Resources/CSS/index.css">
+        <title>Niamh Duffy</title>
     </head>
     <body>
-         <div class="header">
-            <img src="./Resources/Images/Logo.png" id="logo">
-            <div class="nav">
-                <a href="#">Mission</a>
-                <a href="#">Featured Tea</a>
-                <a href="#">Locations</a>
+        <header>
+            <div id="head-content">
+                <a href="index.html"><em><h2>Niamh Ní Dhubhaigh</h2></em></a>
+                <nav>
+                    <ul>
+                        <a href="index.html"><li>Home</li></a>
+                        <a href="#"><li>About Me</li></a>
+                        <a href="#"><li>Gallery</li></a>
+                    </ul>
+                </nav> 
+        </header>
+        <main>
+            <div id="quote-container">
+                <em><h3>"What's for you won't pass you"</h3></em>
             </div>
-        </div>
-        <div id="mission-block">
-            <div id="mission-statement-block">
-                <h2>Our Mission</h2>
-                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-            </div>
-        </div>
-        <div id="tea-block">
-            <h2>Tea of the Month</h2>
-            <h4>What's Steeping at The Tea Cozy?</h4>
-        </div>
-        <div id="teas">
-            <figure>
-                <img class="tea" src="./Resources/Images/Berry Blitz.webp">
-                <figcaption>Fall Berry Blitz Tea</figcaption>
-            </figure>
-            <figure>
-                <img class="tea" src="./Resources/Images/Spiced Rum.jpeg">
-                <figcaption>Spiced Rum Tea</figcaption>                </figure>
-            <figure>
-                <img class="tea" src="./Resources/Images/Donut.jpeg">
-                <figcaption>Seasonal Donuts</figcaption>
-             </figure>
-                <figure>
-                <img class="tea" src="./Resources/Images/Myrtle Ave.jpeg">
-                <figcaption>Myrtle Ave Tea</figcaption>
-            </figure>
-            <figure>
-                <img class="tea" src="./Resources/Images/Bedford Bizarre.jpeg">
-                <figcaption>Bedford Bizarre Tea</figcaption>
-            </figure>
-        </div>
-        <div id="location-block">
-            <h2>Locations</h2>
-            <div id="locations-container">
-                <div class="location-card">
-                    <h3 class="location-head">Downtown</h3>
-                    <h4>384 West 4th St</h3>
-                    <h4>Suite 108</h4>
-                    <h4>Portland, Maine</h4>
-                </div>
-                <div class="location-card">
-                    <h3 class="location-head">East Bayside</h3>
-                    <h4>3433 Phisherman's Avenue</h4>
-                    <h4>(Northwest Corner)</h4>
-                    <h4>Portland, Maine</h4>
-                </div>
-                <div class="location-card">
-                    <h3 class="location-head">Oakdale</h3>
-                    <h4>515 Crescent Avenue</h4>
-                    <h4>Second Floor</h4>
-                    <h4>Portland, Maine</h4>
+        </main>
+        <footer>
+            <div id="foot-content">
+                <div id="social-media">
+                    <a href="https://www.facebook.com/niamh.duffy.507" target="_blank"><img src="./Resources/Images/Facebook_icon_2013.svg.png"/></a>
+                    <a href="https://www.instagram.com/niamhdxffy/" target="_blank"><img src="./Resources/Images/Instagram_icon.png"/></a>
+                    <a href="https://vsco.co/niamhdxffy/gallery" target="_blank"><img src="./Resources/Images/VSCO logo.png"/></a>
                 </div>
             </div>
-        </div>
-        <div id="footer">
-            <h2>The Tea Cozy</h2>
-            <h5>contact@theteacozy.com</h5>
-            <h5>917-555-8904</h5>
-        </div>
-        <div id="bottom-footer">
-            <h5 id="copyright">copyright The Tea Cozy 2017</h5>
-        </div>
+        </footer>
     </body>
 </html>
