Changed CSS and HTML

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="Resources/CSS/index.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Niamh Duffy</title>
     </head>
     <body>
@@ -26,7 +27,8 @@
                 <div id="social-media">
                     <a href="https://www.facebook.com/niamh.duffy.507" target="_blank"><img src="./Resources/Images/Facebook_icon_2013.svg.png"/></a>
                     <a href="https://www.instagram.com/niamhdxffy/" target="_blank"><img src="./Resources/Images/Instagram_icon.png"/></a>
-                    <a href="https://vsco.co/niamhdxffy/gallery" target="_blank"><img src="./Resources/Images/VSCO logo.png"/></a>
+                    <a class="logo" href="https://vsco.co/niamhdxffy/gallery" target="_blank"><img src="./Resources/Images/VSCO_Seal.svg.png"/></a>
+                    <a class="logo" href="https://www.linkedin.com/in/niamh-duffy-97a36b20a/" target="_blank"><img src="./Resources/Images/linked -in-logo.png"/></a>
                 </div>
             </div>
         </footer>
