--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <ul>
                         <a href="index.html"><li>Home</li></a>
                         <a href="#"><li>About Me</li></a>
-                        <a href="#"><li>Gallery</li></a>
+                        <a href="./Resources/HTML/gallery.html"><li>Gallery</li></a>
                     </ul>
                 </nav> 
         </header>
