+Gallery Photos, changed CSS

--- a/Resources/HTML/gallery.html
+++ b/Resources/HTML/gallery.html
@@ -21,33 +21,39 @@
             <div id="photo-container">
                 <figure class="photo-card pic1">
                     <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.35.39.png">
-                    <figcaption class="caption cap1">Niamh with the flowers</figcaption>
+                    <figcaption class="caption cap1">Niamh in her element</figcaption>
                 </figure>
                 <figure class="photo-card pic2">
                     <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.36.34.png">
                     <figcaption class="caption cap2">Mammy and Niamh</figcaption>
                 </figure>
                 <figure class="photo-card pic3">
-
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.38.18.png">
+                    <figcaption class="caption cap3">Niamh pre T-Ball</figcaption>
                 </figure>
                 <figure class="photo-card pic4">
                     <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.37.09.png">
-                    <figcaption class="caption cap4">Niamh with the flowers</figcaption>
+                    <figcaption class="caption cap4">Niamh with her bag of tricks</figcaption>
                 </figure>
                 <figure class="photo-card pic5">
-
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.39.02.png">
+                    <figcaption class="caption cap5">Hourglass shadow</figcaption>
                 </figure>
                 <figure class="photo-card pic6">
-
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.39.28.png">
+                    <figcaption class="caption cap6">Disney Princess</figcaption>
                 </figure>
                 <figure class="photo-card pic7">
-
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.41.28.png">
+                    <figcaption class="caption cap7">No caption needed</figcaption>
                 </figure>
                 <figure class="photo-card pic8">
-
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.41.40.png">
+                    <figcaption class="caption cap8">Coffee and chill</figcaption>
                 </figure>
                 <figure class="photo-card pic9">
-
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.43.44.png">
+                    <figcaption class="caption cap9">Black Beauty</figcaption>
                 </figure>
             </div>
         </main>
