--- a/Resources/HTML/gallery.html
+++ b/Resources/HTML/gallery.html
@@ -38,13 +38,43 @@
                     <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.39.28.png">
                 </figure>
                 <figure class="photo-card pic7">
-                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.41.28.png">
+                    <img class="photo" src="../Images/IMG_4059.jpg">
                 </figure>
                 <figure class="photo-card pic8">
                     <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.41.40.png">
                 </figure>
                 <figure class="photo-card pic9">
                     <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.43.44.png">
+                </figure>
+                <figure class="photo-card pic10">
+                    <img class="photo" src="../Images/IMG_4055.jpg">
+                </figure>
+                <figure class="photo-card pic11">
+                    <img class="photo" src="../Images/IMG_4056.jpg">
+                </figure>
+                <figure class="photo-card pic12">
+                    <img class="photo" src="../Images/IMG_4057.jpg">
+                </figure>
+                <figure class="photo-card pic13">
+                    <img class="photo" src="../Images/IMG_4062.jpg">
+                </figure>
+                <figure class="photo-card pic14">
+                    <img class="photo" src="../Images/IMG_4060.jpg">
+                </figure>
+                <figure class="photo-card pic15">
+                    <img class="photo" src="../Images/IMG_4058.jpg">
+                </figure>
+                <figure class="photo-card pic16">
+                    <img class="photo" src="../Images/IMG_4054.jpg">
+                </figure>
+                <figure class="photo-card pic17">
+                    <img class="photo" src="../Images/Screenshot 2022-07-07 at 17.41.28.png">
+                </figure>
+                <figure class="photo-card pic18">
+                    <img class="photo" src="../Images/IMG_4064.jpg">
+                </figure>
+                <figure class="photo-card pic19">
+                    <img class="photo" src="../Images/IMG_4061.jpg">
                 </figure>
             </div>
         </main>
