Renamed index.html to home.html
Ditto with CSS

--- a/Resources/HTML/gallery.html
+++ b/Resources/HTML/gallery.html
@@ -8,10 +8,10 @@
     <body>
         <header>
             <div id="head-content">
-                <a href="../../index.html"><em><h2>Niamh Ní Dhubhaigh</h2></em></a>
+                <a href="../../home.html"><em><h2>Niamh Ní Dhubhaigh</h2></em></a>
                 <nav>
                     <ul>
-                        <a href="../../index.html"><li>Home</li></a>
+                        <a href="../../home.html"><li>Home</li></a>
                         <a href="#"><li>About Me</li></a>
                         <a href="#"><li>Gallery</li></a>
                     </ul>
