--- a/home.html
+++ b/home.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Resources/CSS/index.css">
+        <link rel="stylesheet" href="Resources/CSS/home.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Niamh Duffy</title>
     </head>
     <body>
         <header>
             <div id="head-content">
-                <a href="index.html"><em><h2>Niamh Ní Dhubhaigh</h2></em></a>
+                <a href="home.html"><em><h2>Niamh Ní Dhubhaigh</h2></em></a>
                 <nav>
                     <ul>
-                        <a href="index.html"><li>Home</li></a>
+                        <a href="home.html"><li>Home</li></a>
                         <a href="#"><li>About Me</li></a>
                         <a href="./Resources/HTML/gallery.html"><li>Gallery</li></a>
                     </ul>
