Added login page, moved files

--- a/Resources/HTML/home.html
+++ b/Resources/HTML/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Resources/CSS/home.css">
+        <link rel="stylesheet" href="../CSS/home.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Niamh Duffy</title>
     </head>
@@ -13,7 +13,7 @@
                     <ul>
                         <a href="home.html"><li>Home</li></a>
                         <a href="#"><li>About Me</li></a>
-                        <a href="./Resources/HTML/gallery.html"><li>Gallery</li></a>
+                        <a href="../HTML/gallery.html"><li>Gallery</li></a>
                     </ul>
                 </nav> 
         </header>
@@ -25,10 +25,10 @@
         <footer>
             <div id="foot-content">
                 <div id="social-media">
-                    <a href="https://www.facebook.com/niamh.duffy.507" target="_blank"><img src="./Resources/Images/Facebook_icon_2013.svg.png"/></a>
-                    <a href="https://www.instagram.com/niamhdxffy/" target="_blank"><img src="./Resources/Images/Instagram_icon.png"/></a>
-                    <a class="logo" href="https://vsco.co/niamhdxffy/gallery" target="_blank"><img src="./Resources/Images/VSCO_Seal.svg.png"/></a>
-                    <a class="logo" href="https://www.linkedin.com/in/niamh-duffy-97a36b20a/" target="_blank"><img src="./Resources/Images/linked -in-logo.png"/></a>
+                    <a href="https://www.facebook.com/niamh.duffy.507" target="_blank"><img src="../Images/Facebook_icon_2013.svg.png"/></a>
+                    <a href="https://www.instagram.com/niamhdxffy/" target="_blank"><img src="../Images/Instagram_icon.png"/></a>
+                    <a class="logo" href="https://vsco.co/niamhdxffy/gallery" target="_blank"><img src="../Images/VSCO_Seal.svg.png"/></a>
+                    <a class="logo" href="https://www.linkedin.com/in/niamh-duffy-97a36b20a/" target="_blank"><img src="../Images/linked -in-logo.png"/></a>
                 </div>
             </div>
         </footer>
