Changed method from POST to GET

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Niamh Duffy</title>
     </head>
     <body>
-        <form class="login-form" action="Resources/HTML/home.html" method="POST">
+        <form class="login-form" action="Resources/HTML/home.html" method="GET">
             <h1>Please login</h1>
             <p id="incorrect-p">Incorrect username or password</p>
             <input type="text" name="" placeholder="Enter username" id="username">
