--- a/Resources/HTML/home.html
+++ b/Resources/HTML/home.html
@@ -2,24 +2,75 @@
 <html>
     <head>
         <link rel="stylesheet" href="../CSS/home.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="icon" href="../Images/logo.png" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Niamh Duffy</title>
     </head>
     <body>
-        <header>
+        <header class="border-bottom border-dark">
             <div id="head-content">
-                <a href="home.html"><em><h2>Niamh Ní Dhubhaigh</h2></em></a>
+                <a href="home.html" class="text-decoration-none"><h2>Niamh Ní Dhubhaigh</h2></a>
                 <nav>
                     <ul>
-                        <a href="home.html"><li>Home</li></a>
-                        <a href="#"><li>About Me</li></a>
-                        <a href="../HTML/gallery.html"><li>Gallery</li></a>
+                        <a href="home.html" class="text-decoration-none"><li>Home</li></a>
+                        <a href="#" class="text-decoration-none"><li>About Me</li></a>
+                        <a href="../HTML/gallery.html" class="text-decoration-none"><li>Gallery</li></a>
                     </ul>
                 </nav> 
         </header>
         <main>
-            <div id="quote-container">
-                <em><h3>"What's for you won't pass you"</h3></em>
+            <div class="container-fluid">
+                <div class="row my-5">
+                    <div id="quote-container" class="col">
+                        <em><h3>"What's for you won't pass you"</h3></em>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div id='main-carousel' class="carousel slide mb-5 p-5 bg-dark rounded" data-bs-ride="true">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                            </div>
+                            <div class="carousel-inner rounded">
+                                <div class="carousel-item active">
+                                    <img src="../Images/IMG_4056.jpg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../Images/IMG_4057.jpg" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../Images/Screenshot 2022-07-07 at 17.46.09.png" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../Images/Screenshot 2022-07-07 at 17.39.51.png" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../Images/Screenshot 2022-07-07 at 17.40.30.png" class="d-block w-100">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../Images/Screenshot 2022-07-07 at 17.42.18.png" class="d-block w-100">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#main-carousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                              </button>
+                              <button class="carousel-control-next" type="button" data-bs-target="#main-carousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                              </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
@@ -32,5 +83,6 @@
                 </div>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
